--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
     min-height: 400px;
 }
 
+.row-card{
+    padding-bottom: 25px;
+}
+
 .footer{
     background-color: #D1C4E9;
     margin: 0px auto;
@@ -36,4 +40,11 @@ body{
 
 .navbar-dark{
     background: #512DA8;
+}
+
+.tab-content{
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
